RESOLVED FIXED198268
[LFC[IFC] Ignore the initial strut's height when the line does not have any content.
https://bugs.webkit.org/show_bug.cgi?id=198268
Summary [LFC[IFC] Ignore the initial strut's height when the line does not have any c...
alan
Reported 2019-05-26 21:32:37 PDT
The initial strut sets the height of the line. However when the line is "empty" this strut height should be ignored.
Attachments
Patch (2.20 KB, patch)
2019-05-26 21:40 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-26 21:32:59 PDT
alan
Comment 2 2019-05-26 21:40:23 PDT
WebKit Commit Bot
Comment 3 2019-05-28 07:49:03 PDT
Comment on attachment 370665 [details] Patch Clearing flags on attachment: 370665 Committed r245810: <https://trac.webkit.org/changeset/245810>
WebKit Commit Bot
Comment 4 2019-05-28 07:49:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.