[LFC[IFC] Ignore the initial strut's height when the line does not have any content. https://bugs.webkit.org/show_bug.cgi?id=198268 <rdar://problem/51150057>

Reviewed by Antti Koivisto.

The strut (https://www.w3.org/TR/CSS22/visudet.html#leading) defines the initial logical height
for the line. This height should be ignored though when the line does not have any content.

* layout/inlineformatting/InlineFormattingContextLineLayout.cpp:
(WebCore::Layout::InlineFormattingContext::LineLayout::closeLine const):


Canonical link: https://commits.webkit.org/212324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245810 268f45cc-cd09-0410-ab3c-d52691b4dbfc